--- a/ios/Resources/NewWallet.storyboard
+++ b/ios/Resources/NewWallet.storyboard
@@ -1106,7 +1106,7 @@
                                             <constraint firstAttribute="width" constant="208" id="lxK-8b-E6P"/>
                                         </constraints>
                                         <attributedString key="attributedText">
-                                            <fragment content="Race Cash is an SPV wallet for Bitcoin Cash">
+                                            <fragment content="RACE-CASH is an SPV wallet for Bitcoin Cash">
                                                 <attributes>
                                                     <color key="NSColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <font key="NSFont" metaFont="system" size="15"/>
